<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="@dimen/px_to_dip_20" >

    <ImageView
        android:id="@+id/contact_head"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginRight="10dp"
        android:contentDescription="@null"
        android:scaleType="fitXY"
        android:src="@drawable/im_mini_avatar_shadow" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp" >

        <TextView
            android:id="@+id/contact_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/contact_time"
            android:textColor="@color/grey"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/contact_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@+id/contact_time"
            android:singleLine="true"
            android:text="@string/contact_name"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/contact_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@+id/contact_time"
            android:singleLine="true"
            android:text="@string/contact_message"
            android:textColor="@color/black"
            android:textSize="15sp" />
    </RelativeLayout>

</LinearLayout>