<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <include
            android:id="@+id/base_titlebar"
            layout="@layout/base_titlebar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="@dimen/px_to_dip_10"
            android:layout_marginRight="@dimen/px_to_dip_10"
            android:layout_marginTop="@dimen/px_to_dip_10"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="150dp" >

                <ImageView
                    android:id="@+id/extend_imageview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:layout_margin="20dp"
                    android:contentDescription="@null"
                    android:src="@drawable/delete" />

                <EditText
                    android:id="@+id/extend_custom_userinfo_edittext"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="10dp"
                    android:background="@drawable/bg_white"
                    android:ems="10"
                    android:gravity="top"
                    android:hint=""
                    android:padding="8dip"
                    android:scrollbars="vertical"
                    android:textColor="#666666"
                    android:textSize="18sp" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/px_to_dip_10"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/extend_submit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button"
                    android:paddingLeft="@dimen/px_to_dip_100"
                    android:paddingRight="@dimen/px_to_dip_100"
                    android:text="@string/submit_userinfo"
                    android:textColor="@color/white"
                    android:textSize="@dimen/px_to_dip_34" >
                </Button>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/px_to_dip_30"
                    android:text="@string/nickname"
                    android:textColor="@android:color/darker_gray" />

                <EditText
                    android:id="@+id/extend_nickname_edittext"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_margin="10dp"
                    android:background="@drawable/bg_white"
                    android:ems="10"
                    android:gravity="top"
                    android:hint="@string/hint_nickname"
                    android:padding="8dip"
                    android:scrollbars="vertical"
                    android:textColor="#666666"
                    android:textColorHint="@android:color/darker_gray"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/extend_nickname_submit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/button"
                    android:paddingLeft="@dimen/px_to_dip_100"
                    android:paddingRight="@dimen/px_to_dip_100"
                    android:text="@string/submit_nickname"
                    android:textColor="@color/white"
                    android:textSize="@dimen/px_to_dip_34" >
                </Button>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/px_to_dip_30"
                android:text="@string/users_relations"
                android:textColor="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/extend_friends_list_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/button"
                    android:paddingLeft="@dimen/px_to_dip_50"
                    android:paddingRight="@dimen/px_to_dip_50"
                    android:text="@string/friends_list"
                    android:textColor="@color/white"
                    android:textSize="@dimen/px_to_dip_34" >
                </Button>

                <Button
                    android:id="@+id/extend_blacklist_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/button"
                    android:paddingLeft="@dimen/px_to_dip_50"
                    android:paddingRight="@dimen/px_to_dip_50"
                    android:text="@string/blacklist"
                    android:textColor="@color/white"
                    android:textSize="@dimen/px_to_dip_34" >
                </Button>
            </LinearLayout>

            <Button
                android:id="@+id/extend_recent_contacts_btn"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/button"
                android:paddingLeft="@dimen/px_to_dip_50"
                android:paddingRight="@dimen/px_to_dip_50"
                android:text="@string/recent_contacts"
                android:textColor="@color/white"
                android:textSize="@dimen/px_to_dip_34" >
            </Button>
            <Button
                android:id="@+id/extend_local_chatmessage_btn"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/button"
                android:paddingLeft="@dimen/px_to_dip_50"
                android:paddingRight="@dimen/px_to_dip_50"
                android:text="@string/local_chatmessage"
                android:textColor="@color/white"
                android:textSize="@dimen/px_to_dip_34" >
            </Button>
            <Button
                android:id="@+id/extend_modify_pass_btn"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/button"
                android:paddingLeft="@dimen/px_to_dip_50"
                android:paddingRight="@dimen/px_to_dip_50"
                android:text="@string/modify_password"
                android:textColor="@color/white"
                android:textSize="@dimen/px_to_dip_34" >
            </Button>
        </LinearLayout>
    </LinearLayout>

</ScrollView>